Fix spacing for single image post for lightbox (#887)
As per title.

It's the little things...

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/887
Co-committed-by: Phil S. <ullarah@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -1100,6 +1100,11 @@ span[title="Copyright"]:before {
   main.container {
     margin: -5rem 0 -3.5rem 0;
   }
+  
+  p:first-of-type:empty+lightbox a {
+    display: block;
+    margin-top: 1.25rem;
+  }
 
   #newPost {
     padding: 1.25rem 0.5rem;
